ensure scrollbar in code on mobile

--- a/themes/mdb/assets/sass/components/_main.scss
+++ b/themes/mdb/assets/sass/components/_main.scss
@@ -28,6 +28,7 @@ main {
     pre {
       padding: 20px;
       margin-bottom: $big_spacer;
+      overflow: auto;
 
       code {
         color: #c25;
